Changelog for NICOS 2
=====================

**Release 2.2.0**

  - Added basic TANGO devices.

  - Added a "DeviceAlias" object that can be used to refer with one name
    to different actual devices.

  - Added graphical help system to the GUI client.  Improved quality of
    docstrings of most commands.

  - Added a "mode" parameter to "doInit()" and "doPreinit()" so that
    device implementers remember to check for simulation mode.

  - Added an API "Measurable.presetInfo()" that returns the accepted preset
    keys; to check that given presets are actually used by the detector(s).

  - Added a new standalone history viewer that plots cache data.

  - Improved the message display in the web interface.

  - Improved the ELog HTML styling.

  - Added a "debug" keyword-only argument to "Simulate()" that prints a
    traceback on exception.

  - Added "obsreadings" parameter to generic axis to use instead of the
    hardcoded 100 times when asking observers for the current value.

  - Added "history()" method to Grace liveplot.

  - History-related commands and methods now accept strings as start and
    end times, e.g. "2012-03-26 12:15".

  - Added a "logging_path" setting to nicos.conf.

  - Renamed "server" parameter of CacheClient to "cache".

  - Added "findpeaks()" analyzing command.

**Release 2.1.2**

  - Fixed not being able to run another manualscan after stopping a
    manualscan.

  - Fixed error in "history()" when calling with actual timestamps.

  - Fixed glitches in cache handling of expired values when restarting
    the cache server.

  - The cache now re-loads database keys from disk even if not restarted
    on the same day.

  - Fixed problem with cache history query not returning all requested
    values.

  - Fixed simulation mode not working with no cache configured.

**Release 2.1.1 (2012-03-22)**

  - Fixed an elog bug that caused elog to quit on Unicode errors.

  - Fixed calling "gauss()" and "poly()" with column names.
